--- a/risk-profile.ipynb
+++ b/risk-profile.ipynb
@@ -61,11 +61,11 @@
     "#### Лингвистическая переменная - Time horizon score\n",
     "Определяется по сумме набранных баллов [1 - 18] при ответе на вопросы анкеты 1.1 и 1.2\n",
     "\n",
-    "- Big Short (BS)\n",
-    "- Mid Short (MS)\n",
-    "- Middle (MM)\n",
-    "- Mid Long (ML)\n",
-    "- Big Long (BL)\n",
+    "- lower (ML) \n",
+    "- low (LL) \n",
+    "- average (ZE)  \n",
+    "- high (HH)\n",
+    "- higher (MH)\n",
     "\n",
     "### 2. Толерантность к риску\n",
     "\n",
@@ -103,7 +103,7 @@
     "- lower (ML) \n",
     "- low (LL) \n",
     "- average (ZE)  \n",
-    "- high (LH)\n",
+    "- high (HH)\n",
     "- higher (MH)\n",
     "- highest (BH)\n",
     "\n",
@@ -130,21 +130,21 @@
     "- столбцы матрицы - значения лингвистической переменной Risk tolerance score\n",
     "- ячека матрицы - значение выходного параметра - Risk Profile \n",
     "\n",
-    "|    | BL | ML | LL | ZE | LH | MH | BH |\n",
+    "|    | BL | ML | LL | ZE | HH | MH | BH |\n",
     "|----|----|----|----|----|----|----|----|\n",
-    "| BS | BC | BC | MC | MC | MM | MM | MM |\n",
-    "| MS | BC | BC | MC | MM | MM | MA | MA |\n",
-    "| MM | BC | MC | MC | MM | MA | MA | BA |\n",
-    "| ML | MC | MC | MM | MM | MA | BA | BA |\n",
-    "| BL | MC | MC | MM | MA | MA | BA | BA |\n"
+    "| ML | BC | BC | MC | MC | MM | MM | MM |\n",
+    "| LL | BC | BC | MC | MM | MM | MA | MA |\n",
+    "| ZE | BC | MC | MC | MM | MA | MA | BA |\n",
+    "| HH | MC | MC | MM | MM | MA | BA | BA |\n",
+    "| MH | MC | MC | MM | MA | MA | BA | BA |\n"
    ],
    "id": "d5d65432e2df94dc"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T08:52:35.935934Z",
-     "start_time": "2024-05-18T08:52:35.918233Z"
+     "end_time": "2024-05-18T09:01:36.902895Z",
+     "start_time": "2024-05-18T09:01:36.893483Z"
     }
    },
    "cell_type": "code",
@@ -160,8 +160,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T08:52:36.332754Z",
-     "start_time": "2024-05-18T08:52:35.954640Z"
+     "end_time": "2024-05-18T09:01:37.302972Z",
+     "start_time": "2024-05-18T09:01:36.918541Z"
     }
    },
    "cell_type": "code",
