--- a/latex/risk-profile.tex
+++ b/latex/risk-profile.tex
@@ -450,10 +450,18 @@
 установления инвестиционного профиля клиента на основе нечеткой логики.
 
 В соответствии с поставленной целью, создаваемая система должна уметь
-решать следующие задачи: - считывание значений параметров по которым
-определяется инвестиционный профиль - расчет инвестиционного профиля на
-основе нечеткой логики - вывод значений параметров полученного
-инвестиционного профиля
+решать следующие задачи:
+
+\begin{itemize}
+\tightlist
+\item
+  считывание значений параметров по которым определяется инвестиционный
+  профиль
+\item
+  расчет инвестиционного профиля на основе нечеткой логики
+\item
+  вывод значений параметров полученного инвестиционного профиля
+\end{itemize}
 
 \subsection{Входные
 данные}\label{ux432ux445ux43eux434ux43dux44bux435-ux434ux430ux43dux43dux44bux435}
@@ -634,10 +642,19 @@ Profile}\label{ux438ux43dux432ux435ux441ux442ux438ux446ux438ux43eux43dux43dux44b
 
 \subsection{Правила}\label{ux43fux440ux430ux432ux438ux43bux430}
 
-Правила заданы матрицей, которая построена по следующим правилам -
-строки матрицы - значения лингвистической переменной Time horizon score
-- столбцы матрицы - значения лингвистической переменной Risk tolerance
-score - ячека матрицы - значение выходного параметра - Risk Profile
+Правила заданы матрицей, которая построена по следующим правилам
+
+\begin{itemize}
+\tightlist
+\item
+  строки матрицы - значения лингвистической переменной Time horizon
+  score
+\item
+  столбцы матрицы - значения лингвистической переменной Risk tolerance
+  score
+\item
+  ячейка матрицы - значение выходного параметра - Risk Profile
+\end{itemize}
 
 \begin{longtable}[]{@{}llllllll@{}}
 \toprule\noalign{}
