--- a/risk-profile.ipynb
+++ b/risk-profile.ipynb
@@ -35,6 +35,7 @@
     "Основной целью создания программы является автоматизации процедуры установления инвестиционного профиля клиента на основе нечеткой логики.\n",
     "\n",
     "В соответствии с поставленной целью, создаваемая система должна уметь решать следующие задачи:\n",
+    "\n",
     "- считывание значений параметров по которым определяется инвестиционный профиль\n",
     "- расчет инвестиционного профиля на основе нечеткой логики\n",
     "- вывод значений параметров полученного инвестиционного профиля\n",
@@ -73,24 +74,28 @@
     "Определяется как суммарный скоринг ответов на вопросы: \n",
     "\n",
     "#### 2.1 Уровень знаний на финансовом рынке\n",
+    "\n",
     "- [ ] нет знаний (0 баллов)\n",
     "- [ ] есть базовые знания (3 балла)\n",
     "- [ ] опытный инвестор (7 баллов)\n",
     "- [ ] эксперт в инвестициях (10 баллов)\n",
     "\n",
     "#### 2.2 Цель инвестиций\n",
+    "\n",
     "- [ ] сохранение капитала и накоплений (1 балл)\n",
     "- [ ] пенсионные накопления (обеспеченное будущее) (5 баллов)\n",
     "- [ ] накопление для определенных целей (крупных покупок) (7 баллов) \n",
     "- [ ] получение максимального дохода (10 баллов)\n",
     "\n",
     "#### 2.3 Ожидаемая доходность от инвестиций\n",
+    "\n",
     "- [ ] хотя бы немного выше депозита (1 балл)\n",
     "- [ ] около 10% в год (3 балла)\n",
     "- [ ] около 20% в год (7 баллов)\n",
     "- [ ] выше 20% в год (10 баллов)\n",
     "\n",
     "#### 2.4 Отношение к рискам инвестирования\n",
+    "\n",
     "- [ ] главное сохранить сбережения, доходность не так важна (0 баллов)\n",
     "- [ ] хотелось бы иметь доходность немного выше выше, чем по банковским вкладам (3 балла)\n",
     "- [ ] хотелось бы иметь доходность, превыщающую банковский вклад в 2 раза (7 баллов)\n",
@@ -127,9 +132,10 @@
     "## Правила\n",
     "\n",
     "Правила заданы матрицей, которая построена по следующим правилам\n",
+    "\n",
     "- строки матрицы - значения лингвистической переменной Time horizon score\n",
     "- столбцы матрицы - значения лингвистической переменной Risk tolerance score\n",
-    "- ячека матрицы - значение выходного параметра - Risk Profile \n",
+    "- ячейка матрицы - значение выходного параметра - Risk Profile \n",
     "\n",
     "|    | BL | ML | LL | ZE | HH | MH | BH |\n",
     "|----|----|----|----|----|----|----|----|\n",
@@ -328,24 +334,28 @@
     "- [ ] 11 лет и более (8 баллов)\n",
     "\n",
     "## 2.1 Уровень знаний на финансовом рынке\n",
+    "\n",
     "- [ ] нет знаний (0 баллов)\n",
     "- [ ] есть базовые знания (3 балла)\n",
     "- [x] опытный инвестор (7 баллов)\n",
     "- [ ] эксперт в инвестициях (10 баллов)\n",
     "\n",
     "## 2.2 Цель инвестиций\n",
+    "\n",
     "- [ ] сохранение капитала и накоплений (1 балл)\n",
     "- [x] пенсионные накопления (обеспеченное будущее) (5 баллов)\n",
     "- [ ] накопление для определенных целей (крупных покупок) (7 баллов) \n",
     "- [ ] получение максимального дохода (10 баллов)\n",
     "\n",
     "## 2.3 Ожидаемая доходность от инвестиций\n",
+    "\n",
     "- [ ] хотя бы немного выше депозита (1 балл)\n",
     "- [x] около 10% в год (3 балла)\n",
     "- [ ] около 20% в год (7 баллов)\n",
     "- [ ] выше 20% в год (10 баллов)\n",
     "\n",
     "## 2.4 Отношение к рискам инвестирования\n",
+    "\n",
     "- [ ] главное сохранить сбережения, доходность не так важна (0 баллов)\n",
     "- [x] хотелось бы иметь доходность немного выше выше, чем по банковским вкладам (3 балла)\n",
     "- [ ] хотелось бы иметь доходность, превыщающую банковский вклад в 2 раза (7 баллов)\n",
@@ -431,6 +441,7 @@
    "metadata": {},
    "source": [
     "## Результат расчетов:\n",
+    "\n",
     "- Риск-профиль клиента: умеренный\n",
     "- Уровень инвестиционного риска: 43.3562 "
    ]
@@ -459,24 +470,28 @@
     "- [ ] 11 лет и более (8 баллов)\n",
     "\n",
     "## 2.1 Уровень знаний на финансовом рынке\n",
+    "\n",
     "- [ ] нет знаний (0 баллов)\n",
     "- [ ] есть базовые знания (3 балла)\n",
     "- [x] опытный инвестор (7 баллов)\n",
     "- [ ] эксперт в инвестициях (10 баллов)\n",
     "\n",
     "## 2.2 Цель инвестиций\n",
+    "\n",
     "- [ ] сохранение капитала и накоплений (1 балл)\n",
     "- [ ] пенсионные накопления (обеспеченное будущее) (5 баллов)\n",
     "- [x] накопление для определенных целей (крупных покупок) (7 баллов) \n",
     "- [ ] получение максимального дохода (10 баллов)\n",
     "\n",
     "## 2.3 Ожидаемая доходность от инвестиций\n",
+    "\n",
     "- [ ] хотя бы немного выше депозита (1 балл)\n",
     "- [ ] около 10% в год (3 балла)\n",
     "- [x] около 20% в год (7 баллов)\n",
     "- [ ] выше 20% в год (10 баллов)\n",
     "\n",
     "## 2.4 Отношение к рискам инвестирования\n",
+    "\n",
     "- [ ] главное сохранить сбережения, доходность не так важна (0 баллов)\n",
     "- [ ] хотелось бы иметь доходность немного выше выше, чем по банковским вкладам (3 балла)\n",
     "- [x] хотелось бы иметь доходность, превыщающую банковский вклад в 2 раза (7 баллов)\n",
@@ -563,6 +578,7 @@
    "metadata": {},
    "source": [
     "## Результат расчетов:\n",
+    "\n",
     "- Риск-профиль клиента: умеренно-аггресивный\n",
     "- Уровень инвестиционного риска: 75.8094 "
    ]
